--- a/themes/simple/layouts/index.html
+++ b/themes/simple/layouts/index.html
@@ -1,40 +1,41 @@
 {{ partial "header.html" . }}
+<div class="banner">
+  <h1>{{ .Site.Title }}</h1>
+  <div class="pure-menu pure-menu-horizontal">
+    <ul class="pure-menu-list">
+      {{ partial "social-media-links.html" . }}
+    </ul>
+  </div>
+  <ul class="posts">
+	{{ $baseurl := .Site.BaseURL }}
+	{{ range $name, $page := .Site.Pages }}
+		{{ if eq .Type "post" }}
+		<li>
+		  <a href="{{ .Permalink }}">{{ $page.Title }}</a>
 
-<div class="pure-g">
-  <div class="pure-u-1-24 pure-u-md-5-24"></div>
-	<div class="pure-u-11-12 pure-u-md-5-8">
-	  <ul class="posts">
-		{{ $baseurl := .Site.BaseURL }}
-		{{ range $name, $page := .Site.Pages }}
-  		{{ if eq .Type "post" }}
-  		<li>
-  		  <a href="{{ .Permalink }}">{{ $page.Title }}</a>
+		  <p class="footnote">
+  			<time datetime="{{ $page.Date.Format "2006-01-02T15:04:05Z07:00" }}" class="post-list timeago">{{ $page.Date.Format "2006-01-02T15:04:05Z07:00" }}</time>
 
-  		  <p class="footnote">
-    			<time datetime="{{ $page.Date.Format "2006-01-02T15:04:05Z07:00" }}" class="post-list timeago">{{ $page.Date.Format "2006-01-02T15:04:05Z07:00" }}</time>
+  			{{ if or $page.Params.tags $page.Params.categories $page.Params.series }}
+  			 |
+  			{{ end }}
 
-    			{{ if or $page.Params.tags $page.Params.categories $page.Params.series }}
-    			 |
-    			{{ end }}
+  			{{ with $page.Params.tags }}
+  			  {{ range $page.Params.tags}}#<a href="{{ $baseurl }}tags/{{ . | urlize }}">{{ . }}</a> {{ end }}
+  			{{ end }}
 
-    			{{ with $page.Params.tags }}
-    			  {{ range $page.Params.tags}}#<a href="{{ $baseurl }}tags/{{ . | urlize }}">{{ . }}</a> {{ end }}
-    			{{ end }}
+  			{{ with $page.Params.categories }}
+  			  categories:[ {{ range $page.Params.categories }}<a href="{{ $baseurl }}categories/{{ . | urlize }}">{{ . }}</a> {{ end }}]
+  			{{ end }}
 
-    			{{ with $page.Params.categories }}
-    			  categories:[ {{ range $page.Params.categories }}<a href="{{ $baseurl }}categories/{{ . | urlize }}">{{ . }}</a> {{ end }}]
-    			{{ end }}
-
-    			{{ with $page.Params.series }}
-    			  series:[ {{ range $page.Params.series }}<a href="{{ $baseurl }}series/{{ . | urlize }}">{{ . }}</a> {{ end }}]
-    			{{ end }}
-  		  </p>
-  		</li>
-  		{{ end }}
+  			{{ with $page.Params.series }}
+  			  series:[ {{ range $page.Params.series }}<a href="{{ $baseurl }}series/{{ . | urlize }}">{{ . }}</a> {{ end }}]
+  			{{ end }}
+		  </p>
+		</li>
 		{{ end }}
-	  </ul>
-	</div>
-  <div class="pure-u-1-24 pure-u-md-1-6"></div>
+	{{ end }}
+  </ul>
 </div>
 
 {{ partial "footer.html" . }}
