--- a/themes/simple/layouts/partials/navbar.html
+++ b/themes/simple/layouts/partials/navbar.html
@@ -1,7 +1,7 @@
 <div class="header pure-g">
   <div class="pure-u-1-24 pure-u-md-5-24"></div>
   <div class="pure-u-11-12 pure-u-md-5-8">
-    <div class="desktop pure-menu pure-menu-horizontal nav-menu">
+    <div class="pure-menu pure-menu-horizontal nav-menu">
       {{ $baseurl := .Site.BaseURL }}
       <a href="{{$baseurl}}" class="site-title pure-menu-heading">{{ .Site.Title }}</a>
       <ul class="pure-menu-list">
@@ -11,18 +11,6 @@
         </li>
         {{ end }}
         {{ partial "social-media-links.html" . }}
-      </ul>
-    </div>
-    <div class="mobile pure-menu nav-menu">
-      <a href="/" class="pure-menu-heading" id="toggle-home">{{ .Site.Title }}</a>
-      <a href="#" id="toggle-btn">&#9776;</a>
-      <ul class="pure-menu-list" id="toggle-content" style="display:none;">
-        {{ $baseurl := .Site.BaseURL }}
-        {{ range $name,$page := .Site.Taxonomies.categories }}
-        <li class="pure-menu-item">
-          <a href="{{ $baseurl }}categories/{{ $name | urlize }}" class="pure-menu-link">{{ $name | title }}</a>
-        </li>
-        {{ end }}
       </ul>
     </div>
   </div>
