--- a/themes/simple/layouts/partials/social-media-links.html
+++ b/themes/simple/layouts/partials/social-media-links.html
@@ -1,5 +1,5 @@
 <li class="pure-menu-item">
-  <a href="{{ .Site.BaseURL }}/index.xml" class="pure-menu-link">
+  <a href="{{ .Site.BaseURL }}index.xml" class="pure-menu-link">
     <i class="fa fa-rss" aria-hidden="true"></i>
   </a>
 </li>
