more blog updates

--- a/themes/simple/layouts/partials/share-links.html
+++ b/themes/simple/layouts/partials/share-links.html
@@ -1,7 +1,7 @@
 <!-- Social Share Button HTML -->
-<li class="pure-menu-item">
-  Share: 
-</li>
+<!-- <li class="pure-menu-item">
+  Share:
+</li> -->
 
 <!-- Twitter -->
 <li class="pure-menu-item">
