--- a/themes/simple/static/css/custom.css
+++ b/themes/simple/static/css/custom.css
@@ -189,15 +189,15 @@ body {
 	font-size:18px;
 }
 
-.post-title{
+.post-title {
 		margin-top: 1em;
-		margin-bottom: 1em;
+		margin-bottom: 0.5em;
 		font-family: "Open Sans", sans-serif;
 		font-weight: 300;
 }
 
 .post-title h1 {
-	font-weight:bold;
+	font-weight:300;
 	font-size:32px;
 	line-height: 40px;
 	margin-top: 0;
@@ -251,11 +251,12 @@ body {
 
 #share-menu {
 	height: 20px;
+	margin-bottom: 15px;
 }
 
 #share-menu li {
-	font-size: 16px;
-	margin-right: 5px;
+	font-size: 14px;
+	margin-right: 10px;
 }
 
 #share-menu li a {
