--- a/themes/simple/layouts/_default/single.html
+++ b/themes/simple/layouts/_default/single.html
@@ -2,10 +2,9 @@
 {{ partial "navbar.html" . }}
 
 <div class="pure-g">
-    <div class="pure-u-1-24 pure-u-md-5-24"></div>
+  <div class="pure-u-1-24 pure-u-md-5-24"></div>
 	<div class="pure-u-11-12 pure-u-md-5-8">
         <div class="post">
-
             <div class="post-title">
                 <h1>{{ .Title }}</h1>
             </div>
@@ -32,8 +31,9 @@
                 </p>
             </div>
         </div>
+        {{ template "_internal/disqus.html" . }}
 	</div>
-    <div class="pure-u-1-24 pure-u-md-1-6"></div>
+  <div class="pure-u-1-24 pure-u-md-1-6"></div>
 </div>
 
 {{ partial "footer.html" . }}
