new post and SEO

--- a/themes/simple/layouts/partials/header.html
+++ b/themes/simple/layouts/partials/header.html
@@ -5,7 +5,9 @@
   <!-- Basic Page Needs –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>{{ .Title }}</title>
-  <meta name="description" content="{{ .Title }}">
+  <meta property="og:title" content="{{ .Title }}">
+  <meta name="keywords" content="{{ delimit .Keywords ", " }}">
+  <meta name="description" content="{{ .Description }}">
   <meta name="author" content="{{ .Site.Author.name }}">
 
   <!-- Mobile Specific Metas –––––––––––––––––––––––––––––––––––––––––––––––––– -->
