--- a/themes/simple/layouts/partials/header.html
+++ b/themes/simple/layouts/partials/header.html
@@ -16,6 +16,7 @@
 
   <!-- Twitter Cards –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="twitter:card" content="summary">
+  <meta name="twitter:image" content="{{ .Site.BaseURL }}img/site.png">
   <meta name="twitter:title" content="{{ .Title }}">
   <meta name="twitter:description" content="{{ .Description }}">
   <meta name="twitter:site" content="@{{ .Site.Author.twitter }}">
