--- a/themes/simple/layouts/_default/list.html
+++ b/themes/simple/layouts/_default/list.html
@@ -5,7 +5,7 @@
 <div class="pure-g">
     <div class="pure-u-1-24 pure-u-md-5-24"></div>
 	<div class="pure-u-11-12 pure-u-md-5-8">
-	  <p class="posts-name">{{ .Title }}:</p>
+	  <p class="posts-name">{{ .Title }}</p>
 
 	  <ul class="posts">
 		{{ $baseurl := .Site.BaseURL }}
@@ -15,14 +15,14 @@
 		  <a href="{{ .Permalink }}">{{ $page.Title }}</a>
 
 		  <p class="footnote">
-			submitted <time datetime="{{ $page.Date.Format "2006-01-02T15:04:05Z07:00" }}" class="post-list timeago">{{ $page.Date.Format "2006-01-02T15:04:05Z07:00" }}</time>
+			<time datetime="{{ $page.Date.Format "2006-01-02T15:04:05Z07:00" }}" class="post-list timeago">{{ $page.Date.Format "2006-01-02T15:04:05Z07:00" }}</time>
 
 			{{ if or $page.Params.tags $page.Params.categories $page.Params.series }}
 			to
 			{{ end }}
 
 			{{ with $page.Params.tags }}
-			tags:[ {{ range $page.Params.tags}}<a href="{{ $baseurl }}tags/{{ . | urlize }}">{{ . }}</a> {{ end }}]
+			| {{ range $page.Params.tags}}<a href="{{ $baseurl }}tags/{{ . | urlize }}">#{{ . }}</a> {{ end }}
 			{{ end }}
 
 			{{ with $page.Params.categories }}
