--- a/themes/simple/layouts/partials/header.html
+++ b/themes/simple/layouts/partials/header.html
@@ -38,7 +38,7 @@
   <!-- FONT –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
   <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/fonts.css">
+  <link href="//fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
 
   <!-- CSS –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/pure-min.css">
@@ -50,6 +50,11 @@
   <!--<![endif]-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
+  {{ if .Site.Params.highlight }}
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}highlight/styles/{{ .Site.Params.highlight }}.css"> {{ else }}
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}highlight/styles/default.css">
+  {{ end }}
+
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/custom.css">
 
   {{ if .RSSlink }}
@@ -58,10 +63,6 @@
   {{ end }}
 
   <!--- highlight js -->
-  {{ if .Site.Params.highlight }}
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}highlight/styles/{{ .Site.Params.highlight }}.css"> {{ else }}
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}highlight/styles/default.css">
-  {{ end }}
   <script src="{{ .Site.BaseURL }}highlight/highlight.pack.js"></script>
   <script>
     hljs.initHighlightingOnLoad();
