--- a/themes/simple/layouts/partials/footer.html
+++ b/themes/simple/layouts/partials/footer.html
@@ -29,7 +29,7 @@
     }
   });
 </script>
-{{ if .Site.Author.gaID }}
+{{ if .Site.Author.gatrackingid }}
 <script>
   (function(i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r;
@@ -43,7 +43,7 @@
     m.parentNode.insertBefore(a, m)
   })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', '{{ .Site.Author.gaID }}', 'auto');
+  ga('create', '{{ .Site.Author.gatrackingid }}', 'auto');
   ga('send', 'pageview');
 </script>
 {{ end }}
